config/switch/thirdparty/alias_oracle_base.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-oracle-alias
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-oracle-alias
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-oracle-alias
spec:
  selector:
    matchLabels:
      app: mysql-oracle-alias
  serviceName: mysql-oracle-alias-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-oracle-alias
    spec:
      containers:
      - image: mysql:5.6
        name: mysql-oracle-alias
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-oracle-alias-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-oracle-alias-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-oracle-alias-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-auth-service
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-auth-service
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-auth-service
spec:
  selector:
    matchLabels:
      app: mysql-auth-service
  serviceName: mysql-auth-service-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-auth-service
    spec:
      containers:
      - image: mysql:5.7
      # - image: alpine
        name: mysql-auth-service
        # command: [ '/bin/sh' ]
        # args: ['-c', 'tail -f /dev/null']
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-auth-service-persistent-storage-2
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-auth-service-persistent-storage-2
        persistentVolumeClaim:
          claimName: mysql-auth-service-pv-claim-2
---
