config/switch/thirdparty/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thirdparty-main
  annotations:
    kubernetes.io/ingress.class: kong
    # This is required to rewrite paths to services that contain multiple endpoints, 
    # e.g. /participants and /parties are both on the account-lookup-service
    konghq.com/plugins: thirdparty-rewrite
    # enable basic auth for these routes
    # konghq.com/plugins: basic-auth-example

spec:
  rules:
    - http:
        paths:
          - path: /api/thirdparty/(services.*)
            backend:
              serviceName: thirdparty-api-adapter
              servicePort: 3008
          - path: /api/thirdparty/(accounts.*)
            backend:
              serviceName: thirdparty-api-adapter
              servicePort: 3008
              # serviceName: echo
              # servicePort: 80
          - path: /api/thirdparty/(consentRequests.*)
            backend:
              serviceName: thirdparty-api-adapter
              servicePort: 3008
          - path: /api/thirdparty/(consents.*)
            backend:
              serviceName: thirdparty-api-adapter
              servicePort: 3008
          - path: /api/thirdparty/(thirdpartyRequests.*)
            backend:
              serviceName: thirdparty-api-adapter
              servicePort: 3008
          - path: /api/thirdparty/(authorizations.*)
            backend:
              serviceName: thirdparty-tx-requests-service
              servicePort: 4003
          - path: /api/admin/oracle-consent/(.*)
            backend:
              serviceName: oracle-consent
              servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thirdparty-health
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: thirdparty-rewrite-health
spec:
  rules:
    - http:
        paths:
          - path: /api/admin/oracle-consent/health
            backend:
              serviceName: oracle-consent
              servicePort: 3000
          - path: /api/admin/thirdparty-api-adapter/health
            backend:
              serviceName: thirdparty-api-adapter
              servicePort: 3008
          - path: /api/admin/thirdparty-tx-requests-service/health
            backend:
              serviceName: thirdparty-tx-requests-service
              servicePort: 4003
          - path: /api/admin/auth-service/health
            backend:
              serviceName: auth-service
              servicePort: 4004

---
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: services-sim-ingress
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: tp-svc.sandbox.mojaloop.io
      http:
        paths:
          - path: /api
            backend:
              serviceName: tp-svc-ml-testing-toolkit-backend
              servicePort: 5050 
          - path: /
            backend:
              serviceName: tp-svc-ml-testing-toolkit-frontend
              servicePort: 6060
          - path: /socket.io/
            backend:
              serviceName: tp-svc-ml-testing-toolkit-backend
              servicePort: 5050

    - host: tp-svc.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: tp-svc-ml-testing-toolkit-backend
              servicePort: 5000
